fix: stampa volantino - reset #root > div overflow in global.scss

--- a/frontend/src/pages/FlyerPage.module.scss
+++ b/frontend/src/pages/FlyerPage.module.scss
@@ -194,6 +194,10 @@
 }
 
 @media print {
+  @page {
+    margin: 1.2cm;
+  }
+
   .page {
     padding-bottom: 1rem;
   }
